Changes: update style.css In media query: header -> position:fixed; #cards_block -> flex-wrap:wrap / flex-direction: column footer -> gap: 20px;
In main doc:
header and footer adjusted to width: 85%

--- a/style.css
+++ b/style.css
@@ -4,12 +4,16 @@
   list-style: none;
   text-decoration: none;
   color: black;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;  
 }
-
+/*
 body {
   margin: 2% 8% 2% 8%;
   padding: 0;
 }
+*/
 
 @media (max-width: 768px) {
   .nav_bar {
@@ -20,6 +24,15 @@ body {
     display: none;
   }
 
+  .block_1 {
+    margin-top: 50px;
+  }
+
+  #cards_block {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
   #destination_cards {
     flex-direction: column;
   }
@@ -27,8 +40,13 @@ body {
     width: 100vw;
   }
 
+  .block_2 {
+    margin-top: 50px;
+  }
+
    footer {
     flex-direction: column;
+    gap: 20px;
   }
 
   main > section > article > h1 {
@@ -42,14 +60,22 @@ body {
 }
 
 header {
+  position: fixed;
+  top: 0px;
+  height: 100px;
+  width: 85%;
+  background-color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
+  margin: 0% 8% 0% 8%;
+  }
 
 nav {
   display: flex;
+  justify-content: center;
   align-items: center;
+  margin-left: 30px;
 }
 
 nav > ul {
@@ -73,6 +99,10 @@ button:hover {
     background-color: transparent;
   }
 
+main {
+  margin: 2% 8% 0% 8%;
+}
+
 select {
   border: none;
   cursor: pointer;
@@ -90,7 +120,7 @@ h2 {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 50px;
+  margin-top: 100px;
 }
 
 .article_hero {
@@ -137,7 +167,7 @@ h2 {
 
 
 #intro > p, h2 {
-  width: 20%;
+  width: 30%;
   text-align: center;
 }
   
@@ -148,10 +178,12 @@ h2 {
 #cards_block {
   display: flex;
   justify-content: space-around;
+ 
 }  
 
 #cards_block img {
   width: 77px;
+  display: flex;
 }
 
 #card_1 {
@@ -208,10 +240,14 @@ h2 {
 footer {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin: 2% 8% 0% 8%;
+  width: 85%;
 }
 
 footer img {
   width: 57px;
+  margin-bottom: 20px;
 }
 
 #intro_3 {
